--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -15,11 +15,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <com.cjj.RecyclerViewWithFooter
+        <com.cjj.loadmore.RecyclerViewWithFooter
             android:id="@+id/rv_load_more"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-        </com.cjj.RecyclerViewWithFooter>
+        </com.cjj.loadmore.RecyclerViewWithFooter>
 
     </android.support.v4.widget.SwipeRefreshLayout>
 </RelativeLayout>
